--- a/blog/conf/app.conf
+++ b/blog/conf/app.conf
@@ -4,3 +4,9 @@ runmode = dev
 autorender = false
 copyrequestbody = true
 EnableDocs = true
+
+session = true
+sessionname = JonSnowBlogSession
+SessionHashKey = ogalgnesvrre
+sessionprovider = memory
+sessiongcmaxlifetime = 86400
